gate/dev-tools/temp/data.err
node : C:\Users\aryan\One
Drive\Desktop\gate\data.j
s:1202
At line:1 char:1
+ node -c data.js 2>&1 | 
Out-File -Encoding utf8 
data.err
+ ~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo       
       : NotSpecified:   
  (C:\Users\aryan\...t   
 e\data.js:1202:Strin    
g) [], RemoteExcepti    
on
    + FullyQualifiedErro 
   rId : NativeCommandE  
  rror
 
};"
  ^

SyntaxError: Invalid or 
unexpected token
    at wrapSafe (node:int
ernal/modules/cjs/loader:
1743:18)
    at checkSyntax (node:
internal/main/check_synta
x:76:3)

Node.js v24.14.0
